facebook login in progress

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#d32f2f</color>
     <color name="colorPrimaryDark">#c72c2c</color>
     <color name="colorAccent">#000000</color>
+    <color name="blue_58_91_148_3a5b94">#3a5b94</color>
 </resources>
