--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,10 +21,9 @@
         android:id="@+id/locationPickerMarker"
         android:visibility="gone"
         android:layout_centerInParent="true"
-        android:paddingBottom="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"/>
+        app:srcCompat="@mipmap/ic_cross"/>
 
 
 </RelativeLayout>
