add location api implementing in progress

--- a/app/src/main/res/layout/activity_addlocation.xml
+++ b/app/src/main/res/layout/activity_addlocation.xml
@@ -64,6 +64,7 @@
             <RadioButton
                 android:id="@+id/bikeParkingRB"
                 android:text="Bike parking"
+                android:checked="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
